Fixes publications letter spacing

--- a/leticiastallone/sass/leticia.scss
+++ b/leticiastallone/sass/leticia.scss
@@ -262,6 +262,7 @@ a {
         color: #333;
         font-family: $font;
         font-size: 14px;
+        letter-spacing: -1px;
         text-transform: uppercase;
     }
 }
